fix: adjust text alignment and padding for better mobile readability

--- a/src/components/sponsorship/sponsorship.module.scss
+++ b/src/components/sponsorship/sponsorship.module.scss
@@ -59,6 +59,7 @@ h1 span {
       @media(max-width: 600px) {
         font-size: 14px;
         line-height: 26px;
+        text-align: left;
       }
     }
 
@@ -301,6 +302,7 @@ h1 span {
 
             @media(max-width: 600px) {
               font-size: 20px;
+              padding-bottom: 3px;
             }
           }
 
